# projectZero

./: .gitattributes  .gitignore  README.md
.github/scripts/: container_build.sh
.github/workflows/: esp32c5-build-master.yml  esp32c5-build-release-no-discord.yml  pages-webflasher.yml
ESP32C5/: .gitignore  CMakeLists.txt  README.md  RGB_SK6812.ino  partitions.csv  partitions_projectzero.csv  post_build.cmake  sdkconfig  sdkconfig.defaults  sdkconfig.old
ESP32C5/SKILL/: SKILL.md  commands-reference.md
ESP32C5/binaries-esp32c5/: README.md  flash_board.py
ESP32C5/components/frame_analyzer/: CMakeLists.txt  frame_analyzer.c
ESP32C5/components/sniffer/: CMakeLists.txt  sniffer.c
ESP32C5/docs/: command-manual.md  google-drive-uploader-plan.md
ESP32C5/main/: CMakeLists.txt  attack_handshake.c  attack_handshake.h  board_spi.h  idf_component.yml  main.c  main.c.tmp  oled_display.c  oled_display.h
ESP32C5/tests/: .env.example  Dockerfile  README.md  conftest.py  docker-compose.yml  pytest.ini  requirements.txt  run_tests.sh
ESP32C5/tools/: build_bin_docker.py  build_oui_binary.py
FLIPPER/: CMakeLists.txt  Lab_C5.c  README.md  application.fam  build_fap.py
FLIPPERv2/: Lab_C5.c
FlipperLight/: CMakeLists.txt  application.fam  c5lab_dev.fap
FlipperLight/src/: app.c  app.h  screen.c  screen.h  screen_arp_from_creds.c  screen_arp_poisoning.c  screen_attacks.h  screen_blackout.c  screen_bluetooth.c  screen_compromised_data.c  screen_compromised_data.h  screen_deauth.c  screen_deauth_client.c  screen_deauth_detector.c  screen_evil_twin.c  screen_evil_twin_passwords.c  screen_global_attacks.c  screen_global_handshaker.c  screen_handshaker.c  screen_handshakes.c  screen_karma_probe.c  screen_main_menu.c  screen_main_menu.h  screen_portal.c  screen_portal_data.c  screen_rogue_ap.c  screen_sae_overflow.c  screen_settings.c  screen_settings.h  screen_settings_redteam.c  screen_settings_scan_time.c  screen_sniff_karma.c  screen_sniffer.c  screen_sniffer_dog.c  screen_wardrive.c  screen_wifi_scan.c  screen_wifi_scan.h  uart_comm.c  uart_comm.h
docs/: api.md  flipper_fap.html  index.html  janos_flash.html  manifest.json
(+32 files in other folders)
